# sophcam_dc100

./: .config  .gitignore  Kbuild  Kconfig  Makefile  Makefile.kbuild  MediaSDK.version  README.md  build_cvitek.sh  git_version.txt  lv_conf.h  repo_dir_def.mk
app_services/src/image_viewer/: CMakeLists.txt  Makefile  asimage_viewer.cpp  decode_helper.hpp  decode_singleton.hpp  display_helper.hpp  display_window.hpp  image_viewer.cpp  image_viewer.hpp  singleton.hpp  utils.hpp
applications/dashcam/ui/aicamera/dc309/: .gitignore  CMakeLists.txt  Contributing.md  Makefile
applications/dashcam/ui/aicamera/dc309/config/: lv_conf_sdl.h
applications/dashcam/ui/aicamera/dc309/docs/: page_aiprocess_image.md  page_factory.md  page_wifilist.md
applications/dashcam/ui/aicamera/dc309/include/: config.h  custom.h  dialogxx.h  events_init.h  gui_guider.h  hal_wifi_ctrl.h  image_process.h  indev.h  infrared.h  mlog.h  power.h  rtt.h  style_common.h  ttp.h  ui_common.h  voiceplay.h
applications/dashcam/ui/aicamera/dc309/src/: main.c
applications/dashcam/ui/aicamera/dc309/src/cardv/: ui_common.c  ui_main.c
applications/dashcam/ui/aicamera/dc309/src/guiguider_ui/: ai_voice_custom_pop.c  ai_voice_custom_pop.h  ai_voice_style.c  ai_voice_style.h  aiprocess_pup.c  aiprocess_pup.h  batter_low_wifi_tips.c  batter_low_wifi_tips.h  custom.c  delete_dialog.c  delete_dialog.h  float_effect.c  float_effect.h  gui_guider.c  icon_select_popup.c  icon_select_popup.h  multilang_strings.c  multilang_strings.h  page_VolumeOverlay.c  page_ai_takephoto.c  page_ai_takephoto.c.backup  page_ai_takephoto.h  page_aitalk.c  page_aitalk.h  page_album.c  page_album.h  page_albumPic.c  page_albumPic.h  page_album_menu.c  page_album_menu.h  page_album_video.c  page_album_video.h  page_all.h  page_home.c  page_home.h  (+88 more)
applications/dashcam/ui/aicamera/dc309/toolchains/: arm-none-linux-musleabihf.cmake  riscv64-unknown-linux-musl.cmake
components/file_recover/samples/: CMakeLists.txt  sample_file_recover.cpp
components/hal/: .gitignore  CMakeLists.txt
components/hal/include/: hal_gps.h  hal_touchpad.h
components/hal/samples/sample_gsensor/: CMakeLists.txt  sample_gsensor.c
components/hal/samples/sample_led/: CMakeLists.txt  sample_led.c
components/hal/samples/sample_pwm/: CMakeLists.txt  sample_pwm.c
components/hal/samples/sample_wifi/: CMakeLists.txt  sample_wifi.c
components/hal/src/adc/: hal_adc.c
components/hal/src/backlight/: hal_backlight.c
components/hal/src/gpio/: hal_gpio.c
components/hal/src/gps/: hal_gps.c  hal_gps_dummy.c  hal_gps_inner.h  hal_gps_uart.c
components/hal/src/gsensor/: hal_gsensor.c
components/hal/src/gsensor/da280/: mir3da.c
components/hal/src/gsensor/fake_gsensor/: fake_gsensor.c
components/hal/src/gsensor/sc7a20e/: sc7a20e.c  sc7a20e.h
components/hal/src/key/: hal_key.c
components/hal/src/led/: hal_led.c
components/hal/src/pwm/: hal_pwm.c
components/hal/src/screen/comm/include/: hal_screen_inner.h
components/hal/src/screen/comm/src/: hal_screen_comm.c
components/hal/src/screen/ek79007/: hal_screen.c  hal_screen.h
components/hal/src/screen/gc9503v/: hal_screen.c  hal_screen.h
components/hal/src/screen/gc9503v_w820/: hal_screen.c  hal_screen.h
components/hal/src/screen/hx8394_mipi/: hal_screen.c  hal_screen.h
components/hal/src/screen/i80st7789/: hal_screen.c  hal_screen.h
components/hal/src/screen/icn9707/: hal_screen.c  hal_screen.h
components/hal/src/screen/jd9165a/: hal_screen.c  hal_screen.h
components/hal/src/screen/mipidsi/include/: screen_mipidsi.h
components/hal/src/screen/mipidsi/src/: screen_mipidsi.c
components/hal/src/screen/nv3049e/: hal_screen.c  hal_screen.h
components/hal/src/screen/ota7290b_mipi11inch/: hal_screen.c  hal_screen.h
components/hal/src/screen/st7701s/: hal_screen.c  hal_screen.h
components/hal/src/touchpad/gt9xx/: hal_touchpad.c
components/hal/src/uart/: hal_uart.c
components/hal/src/watchdog/: hal_watchdog.c
components/hal/src/wifi/aic8800/: wifi_hal.c
components/hal/src/wifi/aic8800/aic8800/: aic_userconfig_8800d80.txt
components/hal/src/wifi/ap6201bm/: wifi_hal.c
components/hal/src/wifi/common/: hal_wifi.c  hal_wifi_ap.c  hal_wifi_common.h  hal_wifi_utils.c
components/hal/src/wifi/hi3881/: wifi_cfg  wifi_hal.c
components/hal/src/wifi/rtl8188fu/: wifi_hal.c
components/hal/src/wifi/rtl8189fs/: log1.txt  log_xiuyang.txt  wifi_hal.c
components/ini/samples/: CMakeLists.txt  config.ini  sample_ini.c
components/mapi/: .gitignore  CMakeLists.txt
components/mapi/include/: mapi.h  mapi_ao.h  mapi_vdec.h
components/mapi/samples/acap_demo/: CMakeLists.txt  README.md  mapi_acap_demo.c
components/mapi/samples/adec_demo/: CMakeLists.txt  README.md  mapi_adec_demo.c
components/mapi/samples/aenc_demo/: CMakeLists.txt  README.md  mapi_aenc_demo.c
components/mapi/samples/aplay_demo/: CMakeLists.txt  README.md  mapi_aplay_demo.c
components/mapi/samples/disp_demo/: 1080p-1.yuv  1080p-2.yuv  CMakeLists.txt  README.md  mapi_disp_demo.c  vo.yuv
components/mapi/samples/online_demo/: CMakeLists.txt  README.md  mapi_online_demo.c
components/mapi/samples/osd_demo/: CMakeLists.txt  mapi_osd_demo.c
components/mapi/samples/vcap_demo/: CMakeLists.txt  README.md  mapi_vcap_demo.c
components/mapi/samples/vdec_demo/: CMakeLists.txt  README.md  mapi_vdec_demo.c
components/mapi/samples/venc_demo/: CMakeLists.txt  README.md  mapi_venc_demo.c
components/mapi/samples/vproc_demo/: CMakeLists.txt  README.md  mapi_vproc_demo.c
components/mapi/src/: audio_aac_adp.c  audio_dl_adp.c  mapi_acap.c  mapi_adec.c  mapi_aenc.c  mapi_ao.c  mapi_disp.c  mapi_internal.c  mapi_internal.h  mapi_iproc.c  mapi_osd.c  mapi_sys.c  mapi_vcap.c  mapi_vcap_internal.c  mapi_vcap_internal.h  mapi_vdec.c  mapi_venc.c  mapi_vproc.c
components/mapi/src/aac/: aacdec.h  aacdec_interface.cpp  aacenc.h  aacenc_interface.cpp  audio_aac_adp.h  audio_dl_adp.h
components/player/samples/: CMakeLists.txt  README.md  sample_player.cpp
components/recorder/samples/: CMakeLists.txt  sample_recorder.c  sample_recorder.h
(+1398 files in other folders)
